<resources>
    <string name="app_name" translatable="false">Veteritec</string>
    <string name="translate_dialog_title">Escolha o Idioma</string>
    <string name="main_menu">Menu Principal</string>
    <string name="title_activity_google_maps">Mapa</string>
    <string name="toastLocationFailed">Não foi possível localizar o animal neste momento! Tente novamente!</string>
    <string name="txtLoading">Carregando</string>
    <string name="txtConfirm">Você têm certeza que deseja excluir este registro?</string>
    <string name="txtConfirmYes">Sim</string>
    <string name="txtConfirmNo">Não</string>
    <string name="setErrorEmptyField">Este campo não pode ser vazio!</string>
    <string name="setErrorMinimumCharacters">O campo deve conter mais que 5 caracteres!</string>
    <string name="setErrorZeroField">Este campo não pode ser zero!</string>
    <string name="txtMainMenuTitle">Sistema Gerenciador de Clínicas Veterinárias</string>
    <string name="txtMainMenuTools">Funcionalidades do aplicativo:</string>
    <string name="txtMainMenuCalculator">Calculadora de Doses</string>
    <string name="txtMainMenuCustomer">Gerenciamento de Clientes</string>
    <string name="txtMainMenuAnimal">Gerenciamento de Animais</string>
    <string name="txtMainMenuHealing">Gerenciamento de Vacinas</string>
    <string name="txtMainMenuCredits">Desenvolvido por:\n- Alan de Jesus Elias de Souza;\n- Cleyson Diego da Silva;\n- Igor Tricarico Marques;\n- Mauricio Tomesani Furlan.</string>
    <string name="cdMainMenuLogo">Esta imagem representa o logotipo do aplicativo.</string>
    <string name="cdMainMenuCalculator">Esta imagem representa a calculadora do aplicativo.</string>
    <string name="cdMainMenuCustomer">Esta imagem representa o gerenciamento de clientes do aplicativo.</string>
    <string name="cdMainMenuAnimal">Esta imagem representa o gerenciamento de animais do aplicativo.</string>
    <string name="cdMainMenuHealing">Esta imagem representa o gerenciamento de vacinas do aplicativo.</string>
    <string name="txtLoginTitle">Sistema Gerenciador de Clínicas Veterinárias</string>
    <string name="txtLoginClinic">Escolha sua clínica:</string>
    <string name="txtLoginEmail">E-mail:</string>
    <string name="txtLoginPassword">Senha:</string>
    <string name="txtNoConnection">Conexão com a internet indisponível!\nTente novamente!</string>
    <string name="edtLoginEmail">Digite o seu e-mail</string>
    <string name="edtLoginPassword">Digite a sua senha</string>
    <string name="cdLoginLogo">Esta imagem representa o logotipo do aplicativo.</string>
    <string name="btnLoginLogin">Entrar</string>
    <string name="errorLoginWrongEmail">E-mail inválido.</string>
    <string name="errorLoginWrongPassword">Senha incorreta.</string>
    <string name="errorLoginUserNotExists">Usuário não encontrado.</string>
    <string name="toastLoginError">Ocorreu um erro durante o login! Tente novamente!</string>
    <string name="toastLoginSuccesfullyLogin">Logado com sucesso!</string>
    <string name="toastLoginEmailPasswordCheck">E-mail e/ou senha incorretos!</string>
    <string name="txtCalculatorTitle">Calculadora de Doses</string>
    <string name="txtCalculatorAnimalWeight">Peso do animal</string>
    <string name="txtCalculatorMeasure" translatable="false">Kg</string>
    <string name="txtCalculatorFarmacoDosage">Dose de fármaco</string>
    <string name="txtCalculatorFarmacoConcentration">Concentração de fármaco</string>
    <string name="txtCalculatorResult" translatable="false">0</string>
    <string name="edtCalculatorAnimalWeight">Ex: 17.4</string>
    <string name="edtCalculatorFarmacoDosage">Ex: 7.8</string>
    <string name="edtCalculatorFarmacoConcentration">Ex 1.6</string>
    <string name="btnCalculatorResult">Calcular</string>
    <string name="toastCalculatorOptionsError">Erro com as opções! Certifique-se de que todos os campos estão preenchidos!</string>
    <string name="toastCalculatorValidationsError">Erro na validação dos dados digitados! Utilize apenas números acima de zero e selecione todas as unidades de medida!</string>
    <string-array name="dosage_array">
        <item>MG</item>
        <item>MCG</item>
    </string-array>
    <string-array name="concentration_array">
        <item>G</item>
        <item>MG</item>
        <item>MCG</item>
        <item>%</item>
    </string-array>
    <string name="txtSwitchNightMode">Modo Noturno</string>
    <string name="txtDrawerMenuTools">Ferramentas</string>
    <string name="txtDrawerMenuCalculator">Calculadora de Doses</string>
    <string name="txtDrawerMenuLanguage">Alterar Idioma</string>
    <string name="txtDrawerMenuCustomer">Cliente</string>
    <string name="txtDrawerMenuAnimal">Animal</string>
    <string name="txtDrawerMenuVaccine">Vacina</string>
    <string name="txtDrawerMenuAdd">Adicionar</string>
    <string name="txtDrawerMenuQuery">Consultar</string>
    <string name="txtDrawerMenuAccount">Conta</string>
    <string name="txtDrawerMenuAddEmployee">Adicionar Funcionário</string>
    <string name="txtDrawerMenuLogout">Desconectar</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Fechar</string>
    <string name="txtAddVaccineAddTitle">Adicionar Vacinação</string>
    <string name="txtAddVaccineEditTitle">Editar Vacinação</string>
    <string name="txtAddVaccineVeterinary">Veterinário</string>
    <string name="txtAddVaccineDate">Data</string>
    <string name="txtAddVaccineCustomer">Cliente</string>
    <string name="txtAddVaccineHour">Hora</string>
    <string name="txtAddVaccineAnimal">Animal</string>
    <string name="txtAddVaccineDescription">Descrição</string>
    <string name="edtAddVaccineDate" translatable="false">00/00/0000</string>
    <string name="edtAddVaccineHour" translatable="false">00:00</string>
    <string name="edtAddVaccineDescription">Ex: O animal será vacinado contra raiva.</string>
    <string name="btnAddVaccineSave">Salvar</string>
    <string name="toastAddVaccineError">Erro ao obter os insumos para adicionar vacina! Tente novamente!</string>
    <string name="toastAddVaccineGetEmployeesFailure">Erro ao obter a lista de Veterinários! Tente novamente!</string>
    <string name="toastAddVaccineGetCustomersFailure">Erro ao obter a lista de Clientes! Tente novamente!</string>
    <string name="toastAddVaccineGetPetsFailure">Erro ao obter a lista de Animais! Tente novamente!</string>
    <string name="toastAddVaccineSuccesfullyAdd">Nova vacina criada com sucesso!</string>
    <string name="toastAddVaccineFailureAdd">Não foi possível criar a vacina! Tente novamente!</string>
    <string name="toastAddVaccineSuccesfullyEdit">Vacina editada com sucesso!</string>
    <string name="toastAddVaccineFailureEdit">Não foi possível editar a vacina! Tente novamente!</string>
    <string name="toastAddVaccineSuccesfullyDelete">Vacina deletada com sucesso!</string>
    <string name="toastAddVaccineFailureDelete">Não foi possível deletar a vacina! Tente novamente!</string>
    <string-array name="veterinary_array">
        <item>Cleyson Diego da Silva</item>
        <item>Igor Tricarico Marques</item>
    </string-array>
    <string-array name="customer_array">
        <item>Cleyson Diego da Silva</item>
        <item>Igor Tricarico Marques</item>
    </string-array>
    <string-array name="animal_array">
        <item>Bilu</item>
        <item>Charmosa</item>
        <item>Xuxu</item>
    </string-array>
    <string name="txtQueryCustomerTitle">Procurar Cliente</string>
    <string name="txtQueryAnimalTitle">Procurar Animal</string>
    <string name="txtQueryVaccineTitle">Procurar Vacinação</string>
    <string name="txtQueryCustomer">Cliente</string>
    <string name="edtQueryCustomer">Ex: João da Silva</string>
    <string name="toastQueryError">Houve um erro ao abrir a tela! Tente novamente!</string>
    <string name="toastQueryCustomersRequestError">Erro ao obter a lista de Clientes! Tente novamente!</string>
    <string name="toastQueryPetsRequestError">Erro ao obter a lista de Animais! Tente novamente!</string>
    <string name="toastQueryVaccinesRequestError">Erro ao obter a lista de Vacinas! Tente novamente!</string>
    <string name="txtAddCustomerAddTitle">Adicionar Cliente</string>
    <string name="txtAddCustomerEditTitle">Editar Cliente</string>
    <string name="txtAddCustomerName">Nome Completo</string>
    <string name="txtAddCustomerCPF">CPF</string>
    <string name="txtAddCustomerCEP">CEP</string>
    <string name="txtAddCustomerStreet">Rua</string>
    <string name="txtAddCustomerNumber">Número</string>
    <string name="txtAddCustomerNeighborhood">Bairro</string>
    <string name="txtAddCustomerTelephone">Telefone (Opcional)</string>
    <string name="txtAddCustomerCellphone">Celular</string>
    <string name="txtAddCustomerEmail">E-mail</string>
    <string name="edtAddCustomerName">Ex: José da Silva</string>
    <string name="edtAddCustomerCPF">Ex: 154.468.451–57</string>
    <string name="edtAddCustomerCEP">Ex: 13354–685</string>
    <string name="edtAddCustomerStreet">Ex: Rua das Orquídeas</string>
    <string name="edtAddCustomerNumber">Ex: 502</string>
    <string name="edtAddCustomerNeighborhood">Ex: Campo Bonito</string>
    <string name="edtAddCustomerTelephone">Ex: (19)3845–5792</string>
    <string name="edtAddCustomerCellphone">Ex: (19)99426–6248</string>
    <string name="edtAddCustomerEmail">Ex: jose.silva@uol.com.br</string>
    <string name="toastAddCustomerError">Houve um erro ao abrir a tela! Tente novamente!</string>
    <string name="toastAddCustomerFieldsCheck">Por favor, verifique os dados digitados e tente novamente!</string>
    <string name="toastAddCustomerEnabledEdition">Edição habilitada!</string>
    <string name="toastAddCustomerDisabledEdition">Edição desabilitada!</string>
    <string name="toastAddCustomerQueryCustomersError">Erro ao obter a lista de clientes cadastrados! Tente novamente!</string>
    <string name="toastAddCustomerSuccesfullyAddedCustomer">Cliente adicionado com sucesso!</string>
    <string name="toastAddCustomerFailureAddedCustomer">Não foi possível adicionar o Cliente! Tente novamente!</string>
    <string name="toastAddCustomerSuccesfullyEditedCustomer">Cliente editado com sucesso!</string>
    <string name="toastAddCustomerFailureEditedCustomer">Não foi possível editar o Cliente! Tente novamente!</string>
    <string name="toastAddCustomerSuccesfullyDeletedCustomer">Cliente deletado com sucesso!</string>
    <string name="toastAddCustomerFailureDeletedCustomer">Não foi possível deletar o Cliente! Tente novamente!</string>
    <string name="txtAddAnimalAddTitle">Adicionar Animal</string>
    <string name="txtAddAnimalEditTitle">Editar Animal</string>
    <string name="txtAddAnimalOwner">Dono</string>
    <string name="txtTranslateBR">Português Brasileiro</string>
    <string name="txtTranslateUS">Inglês Americano</string>
    <string name="txtTranslateES">Espanhol</string>
    <string name="txtTranslateFR">Francês</string>
    <string name="txtTranslateHI">Hindi</string>
    <string name="txtTranslateRU">Russo</string>
    <string name="txtTranslateZH">Chinês Simplificado</string>
    <string name="txtTranslateJA">Japonês</string>
    <string name="cdTranslateBR">Esta imagem representa a bandeira do Brasil</string>
    <string name="cdTranslateUS">Esta imagem representa a bandeira dos Estados Unidos</string>
    <string name="cdTranslateES">Esta imagem representa a bandeira da Espanha</string>
    <string name="cdTranslateFR">Esta imagem representa a bandeira da França</string>
    <string name="cdTranslateHI">Esta imagem representa a bandeira da Índia</string>
    <string name="cdTranslateRU">Esta imagem representa a bandeira da Rússia</string>
    <string name="cdTranslateZH">Esta imagem representa a bandeira da China</string>
    <string name="cdTranslateJA">Esta imagem representa a bandeira do Japão</string>
</resources>